--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,12 @@ a {
     padding: 10px 20px;
 }
 
+footer > .addinfo {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 10pt;
+}
+
 @media only screen and (max-width: 800px) {
 
     .logo {
